2006-11-15  Carlos Garnacho  <carlosg@gnome.org>

	* Shares/NFS.pm (get_share_client_info): Do not reset $rw if it finds
	other NFS share options.

2006-11-15  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Parse.pm (get_from_chatfile):
	* Utils/Replace.pm (set_chat): Fix infinite loop if the chatscript
	contains tabs. Fixes GNOME Bug #343193 (Kris Shannon)

2006-11-15  Carlos Garnacho  <carlosg@gnome.org>

	* Makefile.am: include test-backends in EXTRA_DIST, it's nice to have.

2006-11-15  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_interface_parse_table):
	* Utils/Replace.pm (set_chat): Improve phone number parsing regexes
	* Utils/Replace.pm (set_from_table): do not process empty values in
	the configuration as if they weren't empty.

2006-11-14  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/File.pm: do not double escape quotes, commands are already
	escaped where necessary. Fixes GNOME bug #343999.

2006-11-14  Carlos Garnacho  <carlosg@gnome.org>

	* Time/TimeDate.pm (get_timezone) (set_timezone): be prepared to
	handle symlinks to the zoneinfo file, also save it as a link by
	default. Fixes GNOME bug #354661.

2006-11-05  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.91

2006-11-03  Carlos Garnacho  <carlosg@gnome.org>

	* Shares/NFS.pm (get_share_client_info): logic was wrong when
	retrieving whether the share is rw/ro, invert it.
	* Network/Ifaces.pm (get_interface_parse_table): allow [*#] in phone
	numbers.

2006-10-31  Carlos Garnacho  <carlosg@gnome.org>

	* Shares/NFS.pm (share_line_matches): fix != SunOS case.

2006-10-26  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.90
	* message-of-doom: removed

2006-10-26  Carlos Garnacho  <carlosg@gnome.org>

	* Init/Services.pm: fixes for archlinux

2006-10-12  Carlos Garnacho  <carlosg@gnome.org>

	* configure.in: expand properly datadir and sysconfdir

2006-10-09  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm: don't corrupt wireless essid and key.
