@@ -24,6 +24,8 @@
 use lib "@scriptsdir@";
 use lib "@netdbusdir@";
 
+our $localstatedir = "@localstatedir@";
+
 BEGIN {
   my $i = 0;
 
